Input parameter added to specify forecast interval and code modified. Tradeoff respose time and forecast interval time in milliseconds are added in api results.
